--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <h1>Simple Test Page</h1>
+    <a href="https://example.com" target="_blank" rel="noopener noreferrer">Visit Example</a>
     <input type="text" placeholder="Enter text here">
     <button onclick="logMessage()">Log to Console</button>
     <button onclick="changeBackground()">Change Background</button>
