--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
     </style>
 </head>
 <body>
-    <h1>Simple Test Page</h1>
-    <a href="https://example.com" target="_blank" rel="noopener noreferrer">Visit Example</a>
-    <a href="https://example.com" target="_blank">Visit Example</a>
-    <input type="text" placeholder="Enter text here">
-    <button onclick="logMessage()">Log to Console</button>
-    <button onclick="changeBackground()">Change Background</button>
-    <button id="disableButton" onclick="disableSelf(this)">Disable Me</button>
-    <button onclick="addElement()">Add Element</button>
-    
+    <div>
+        <h1>Simple Test Page</h1>
+        <a href="https://example.com" target="_blank" rel="noopener noreferrer">Visit Example</a>
+        <a href="https://example.com" target="_blank">Visit Example</a>
+        <input type="text" placeholder="Enter text here">
+        <button onclick="logMessage()">Log to Console</button>
+        <button onclick="changeBackground()">Change Background</button>
+        <button id="disableButton" onclick="disableSelf(this)">Disable Me</button>
+        <button onclick="addElement()">Add Element</button>
+    </div>
     <script>
         function logMessage() {
             console.log('Console log button clicked');
