--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div id="123">
         <h1>Simple Test Page</h1>
         <a href="https://example.com" target="_blank" rel="noopener noreferrer">Visit Example</a>
         <a href="https://example.com" target="_blank">Visit Example</a>
